minor: change project name and add references for JSON sample requests

--- a/templates/password-reset-success.html
+++ b/templates/password-reset-success.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yappy Verification OTP</title>
+    <title>Pigeon Verification OTP</title>
     <style>
         *,
         *::before,
@@ -40,6 +40,7 @@
 <body>
     <div class="container">
         <p>Welcome back, {{.Name}}! Let's share your recent moments with friends!</p>
+    </div>
 </body>
 
 </html>
