--- a/templates/email-activation.html
+++ b/templates/email-activation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yappy Verification OTP</title>
+    <title>Pigeon Verification OTP</title>
     <style>
         *,
         *::before,
@@ -72,6 +72,7 @@
             <span>Verify Now</span>
         </a>
         <p>If it's not you {{.Name}}, please <a href="#">contact me</a>.</p>
+    </div>
 </body>
 
 </html>
