--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yappy Verification OTP</title>
+    <title>Pigeon Verification OTP</title>
     <style>
         *,
         *::before,
@@ -40,6 +40,7 @@
 <body>
     <div class="container">
         <p>Cheers, {{.Name}}! Now it's time to have fun!</p>
+    </div>
 </body>
 
 </html>
